tests/react_jsx/react_jsx.exp
Error: test.js:149
149: <NoProps />; // OK: There are no props.
     ^^^^^^^^^^^ React element `NoProps`
149: <NoProps />; // OK: There are no props.
     ^^^^^^^^^^^ props of React element `NoProps`. Inexact type is incompatible with exact type
 17:   extends React.Component<void, $Exact<Props_NoProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^ exact type: Props_NoProps

Error: test.js:150
150: <NoProps foo={42} />; // OK: Extra props are fine.
     ^^^^^^^^^^^^^^^^^^^^ React element `NoProps`
150: <NoProps foo={42} />; // OK: Extra props are fine.
     ^^^^^^^^^^^^^^^^^^^^ property `foo`. Property not found in
 21: const FunctionExact_NoProps = (props: $Exact<Props_NoProps>) => any;
                                           ^^^^^^^^^^^^^^^^^^^^^ object type

Error: test.js:150
150: <NoProps foo={42} />; // OK: Extra props are fine.
     ^^^^^^^^^^^^^^^^^^^^ React element `NoProps`
150: <NoProps foo={42} />; // OK: Extra props are fine.
     ^^^^^^^^^^^^^^^^^^^^ props of React element `NoProps`. Inexact type is incompatible with exact type
 17:   extends React.Component<void, $Exact<Props_NoProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^ exact type: Props_NoProps

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
                  v
 41:   propTypes: {
 42:     string1: React.PropTypes.string.isRequired,
 43:     string2: React.PropTypes.string.isRequired,
...:
 47:   },
       ^ property `boolean1`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
                  v
 41:   propTypes: {
 42:     string1: React.PropTypes.string.isRequired,
 43:     string2: React.PropTypes.string.isRequired,
...:
 47:   },
       ^ property `boolean2`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
                  v
 41:   propTypes: {
 42:     string1: React.PropTypes.string.isRequired,
 43:     string2: React.PropTypes.string.isRequired,
...:
 47:   },
       ^ property `number`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
                  v
 41:   propTypes: {
 42:     string1: React.PropTypes.string.isRequired,
 43:     string2: React.PropTypes.string.isRequired,
...:
 47:   },
       ^ property `string1`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
                  v
 41:   propTypes: {
 42:     string1: React.PropTypes.string.isRequired,
 43:     string2: React.PropTypes.string.isRequired,
...:
 47:   },
       ^ property `string2`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 49: class Class_ManyProps extends React.Component<void, Props_ManyProps, void> {}
                                                         ^^^^^^^^^^^^^^^ property `boolean1`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 49: class Class_ManyProps extends React.Component<void, Props_ManyProps, void> {}
                                                         ^^^^^^^^^^^^^^^ property `boolean2`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 49: class Class_ManyProps extends React.Component<void, Props_ManyProps, void> {}
                                                         ^^^^^^^^^^^^^^^ property `number`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 49: class Class_ManyProps extends React.Component<void, Props_ManyProps, void> {}
                                                         ^^^^^^^^^^^^^^^ property `string1`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 49: class Class_ManyProps extends React.Component<void, Props_ManyProps, void> {}
                                                         ^^^^^^^^^^^^^^^ property `string2`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 53:   extends React.PureComponent<void, Props_ManyProps, void> {}
                                         ^^^^^^^^^^^^^^^ property `boolean1`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 53:   extends React.PureComponent<void, Props_ManyProps, void> {}
                                         ^^^^^^^^^^^^^^^ property `boolean2`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 53:   extends React.PureComponent<void, Props_ManyProps, void> {}
                                         ^^^^^^^^^^^^^^^ property `number`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 53:   extends React.PureComponent<void, Props_ManyProps, void> {}
                                         ^^^^^^^^^^^^^^^ property `string1`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 53:   extends React.PureComponent<void, Props_ManyProps, void> {}
                                         ^^^^^^^^^^^^^^^ property `string2`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 54: const Function_ManyProps = (props: Props_ManyProps) => any;
                                        ^^^^^^^^^^^^^^^ property `boolean1`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 54: const Function_ManyProps = (props: Props_ManyProps) => any;
                                        ^^^^^^^^^^^^^^^ property `boolean2`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 54: const Function_ManyProps = (props: Props_ManyProps) => any;
                                        ^^^^^^^^^^^^^^^ property `number`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 54: const Function_ManyProps = (props: Props_ManyProps) => any;
                                        ^^^^^^^^^^^^^^^ property `string1`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 54: const Function_ManyProps = (props: Props_ManyProps) => any;
                                        ^^^^^^^^^^^^^^^ property `string2`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 55: const FunctionExact_ManyProps = (props: $Exact<Props_ManyProps>) => any;
                                             ^^^^^^^^^^^^^^^^^^^^^^^ property `boolean1`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 55: const FunctionExact_ManyProps = (props: $Exact<Props_ManyProps>) => any;
                                             ^^^^^^^^^^^^^^^^^^^^^^^ property `boolean2`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 55: const FunctionExact_ManyProps = (props: $Exact<Props_ManyProps>) => any;
                                             ^^^^^^^^^^^^^^^^^^^^^^^ property `number`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 55: const FunctionExact_ManyProps = (props: $Exact<Props_ManyProps>) => any;
                                             ^^^^^^^^^^^^^^^^^^^^^^^ property `string1`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
 55: const FunctionExact_ManyProps = (props: $Exact<Props_ManyProps>) => any;
                                             ^^^^^^^^^^^^^^^^^^^^^^^ property `string2`. Property not found in
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`

Error: test.js:152
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ React element `ManyProps`
152: <ManyProps />; // Error: There are no props.
     ^^^^^^^^^^^^^ props of React element `ManyProps`. Inexact type is incompatible with exact type
 51:   extends React.Component<void, $Exact<Props_ManyProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_ManyProps

Error: test.js:153
     v---------------------------------------
153: <ManyProps // OK: All props are defined.
154:   string1="foo"
155:   string2={'bar'}
...:
159: />;
     -^ React element `ManyProps`
     v---------------------------------------
153: <ManyProps // OK: All props are defined.
154:   string1="foo"
155:   string2={'bar'}
...:
159: />;
     -^ props of React element `ManyProps`. Inexact type is incompatible with exact type
 51:   extends React.Component<void, $Exact<Props_ManyProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_ManyProps

Error: test.js:160
     v-----------------------------------------
160: <ManyProps // OK: Other props are allowed.
161:   string1="foo"
162:   string2={'bar'}
...:
169: />;
     -^ React element `ManyProps`
     v-----------------------------------------
160: <ManyProps // OK: Other props are allowed.
161:   string1="foo"
162:   string2={'bar'}
...:
169: />;
     -^ property `a`. Property not found in
 55: const FunctionExact_ManyProps = (props: $Exact<Props_ManyProps>) => any;
                                             ^^^^^^^^^^^^^^^^^^^^^^^ object type

Error: test.js:160
     v-----------------------------------------
160: <ManyProps // OK: Other props are allowed.
161:   string1="foo"
162:   string2={'bar'}
...:
169: />;
     -^ React element `ManyProps`
     v-----------------------------------------
160: <ManyProps // OK: Other props are allowed.
161:   string1="foo"
162:   string2={'bar'}
...:
169: />;
     -^ property `b`. Property not found in
 55: const FunctionExact_ManyProps = (props: $Exact<Props_ManyProps>) => any;
                                             ^^^^^^^^^^^^^^^^^^^^^^^ object type

Error: test.js:160
     v-----------------------------------------
160: <ManyProps // OK: Other props are allowed.
161:   string1="foo"
162:   string2={'bar'}
...:
169: />;
     -^ React element `ManyProps`
     v-----------------------------------------
160: <ManyProps // OK: Other props are allowed.
161:   string1="foo"
162:   string2={'bar'}
...:
169: />;
     -^ property `c`. Property not found in
 55: const FunctionExact_ManyProps = (props: $Exact<Props_ManyProps>) => any;
                                             ^^^^^^^^^^^^^^^^^^^^^^^ object type

Error: test.js:160
     v-----------------------------------------
160: <ManyProps // OK: Other props are allowed.
161:   string1="foo"
162:   string2={'bar'}
...:
169: />;
     -^ React element `ManyProps`
     v-----------------------------------------
160: <ManyProps // OK: Other props are allowed.
161:   string1="foo"
162:   string2={'bar'}
...:
169: />;
     -^ props of React element `ManyProps`. Inexact type is incompatible with exact type
 51:   extends React.Component<void, $Exact<Props_ManyProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_ManyProps

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ React element `ManyProps`
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. Inexact type is incompatible with exact type
 51:   extends React.Component<void, $Exact<Props_ManyProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_ManyProps

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with
                  v
 41:   propTypes: {
 42:     string1: React.PropTypes.string.isRequired,
 43:     string2: React.PropTypes.string.isRequired,
...:
 47:   },
       ^ propTypes of React component
  Property `boolean1` is incompatible:
    173:   boolean1={null}
                     ^^^^ null. This type is incompatible with
     44:     boolean1: React.PropTypes.bool.isRequired,
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ boolean

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with
                  v
 41:   propTypes: {
 42:     string1: React.PropTypes.string.isRequired,
 43:     string2: React.PropTypes.string.isRequired,
...:
 47:   },
       ^ propTypes of React component
  Property `boolean2` is incompatible:
    174:   boolean2={null}
                     ^^^^ null. This type is incompatible with
     45:     boolean2: React.PropTypes.bool.isRequired,
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ boolean

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with
                  v
 41:   propTypes: {
 42:     string1: React.PropTypes.string.isRequired,
 43:     string2: React.PropTypes.string.isRequired,
...:
 47:   },
       ^ propTypes of React component
  Property `number` is incompatible:
    175:   number={null}
                   ^^^^ null. This type is incompatible with
     46:     number: React.PropTypes.number.isRequired,
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with
                  v
 41:   propTypes: {
 42:     string1: React.PropTypes.string.isRequired,
 43:     string2: React.PropTypes.string.isRequired,
...:
 47:   },
       ^ propTypes of React component
  Property `string1` is incompatible:
    171:   string1={null}
                    ^^^^ null. This type is incompatible with
     42:     string1: React.PropTypes.string.isRequired,
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with
                  v
 41:   propTypes: {
 42:     string1: React.PropTypes.string.isRequired,
 43:     string2: React.PropTypes.string.isRequired,
...:
 47:   },
       ^ propTypes of React component
  Property `string2` is incompatible:
    172:   string2={null}
                    ^^^^ null. This type is incompatible with
     43:     string2: React.PropTypes.string.isRequired,
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with
 49: class Class_ManyProps extends React.Component<void, Props_ManyProps, void> {}
                                                         ^^^^^^^^^^^^^^^ object type
  Property `boolean1` is incompatible:
    173:   boolean1={null}
                     ^^^^ null. This type is incompatible with
     35:   boolean1: boolean,
                     ^^^^^^^ boolean

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with
 49: class Class_ManyProps extends React.Component<void, Props_ManyProps, void> {}
                                                         ^^^^^^^^^^^^^^^ object type
  Property `boolean2` is incompatible:
    174:   boolean2={null}
                     ^^^^ null. This type is incompatible with
     36:   boolean2: boolean,
                     ^^^^^^^ boolean

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with
 49: class Class_ManyProps extends React.Component<void, Props_ManyProps, void> {}
                                                         ^^^^^^^^^^^^^^^ object type
  Property `number` is incompatible:
    175:   number={null}
                   ^^^^ null. This type is incompatible with
     37:   number: number,
                   ^^^^^^ number

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with
 49: class Class_ManyProps extends React.Component<void, Props_ManyProps, void> {}
                                                         ^^^^^^^^^^^^^^^ object type
  Property `string1` is incompatible:
    171:   string1={null}
                    ^^^^ null. This type is incompatible with
     33:   string1: string,
                    ^^^^^^ string

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with
 49: class Class_ManyProps extends React.Component<void, Props_ManyProps, void> {}
                                                         ^^^^^^^^^^^^^^^ object type
  Property `string2` is incompatible:
    172:   string2={null}
                    ^^^^ null. This type is incompatible with
     34:   string2: string,
                    ^^^^^^ string

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with
 53:   extends React.PureComponent<void, Props_ManyProps, void> {}
                                         ^^^^^^^^^^^^^^^ object type
  Property `boolean1` is incompatible:
    173:   boolean1={null}
                     ^^^^ null. This type is incompatible with
     35:   boolean1: boolean,
                     ^^^^^^^ boolean

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with
 53:   extends React.PureComponent<void, Props_ManyProps, void> {}
                                         ^^^^^^^^^^^^^^^ object type
  Property `boolean2` is incompatible:
    174:   boolean2={null}
                     ^^^^ null. This type is incompatible with
     36:   boolean2: boolean,
                     ^^^^^^^ boolean

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with
 53:   extends React.PureComponent<void, Props_ManyProps, void> {}
                                         ^^^^^^^^^^^^^^^ object type
  Property `number` is incompatible:
    175:   number={null}
                   ^^^^ null. This type is incompatible with
     37:   number: number,
                   ^^^^^^ number

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with
 53:   extends React.PureComponent<void, Props_ManyProps, void> {}
                                         ^^^^^^^^^^^^^^^ object type
  Property `string1` is incompatible:
    171:   string1={null}
                    ^^^^ null. This type is incompatible with
     33:   string1: string,
                    ^^^^^^ string

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with
 53:   extends React.PureComponent<void, Props_ManyProps, void> {}
                                         ^^^^^^^^^^^^^^^ object type
  Property `string2` is incompatible:
    172:   string2={null}
                    ^^^^ null. This type is incompatible with
     34:   string2: string,
                    ^^^^^^ string

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with the expected param type of
 54: const Function_ManyProps = (props: Props_ManyProps) => any;
                                        ^^^^^^^^^^^^^^^ object type
  Property `boolean1` is incompatible:
    173:   boolean1={null}
                     ^^^^ null. This type is incompatible with
     35:   boolean1: boolean,
                     ^^^^^^^ boolean

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with the expected param type of
 54: const Function_ManyProps = (props: Props_ManyProps) => any;
                                        ^^^^^^^^^^^^^^^ object type
  Property `boolean2` is incompatible:
    174:   boolean2={null}
                     ^^^^ null. This type is incompatible with
     36:   boolean2: boolean,
                     ^^^^^^^ boolean

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with the expected param type of
 54: const Function_ManyProps = (props: Props_ManyProps) => any;
                                        ^^^^^^^^^^^^^^^ object type
  Property `number` is incompatible:
    175:   number={null}
                   ^^^^ null. This type is incompatible with
     37:   number: number,
                   ^^^^^^ number

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with the expected param type of
 54: const Function_ManyProps = (props: Props_ManyProps) => any;
                                        ^^^^^^^^^^^^^^^ object type
  Property `string1` is incompatible:
    171:   string1={null}
                    ^^^^ null. This type is incompatible with
     33:   string1: string,
                    ^^^^^^ string

Error: test.js:170
     v-----------------------------------------------------
170: <ManyProps // Error: All props have an incorrect type.
171:   string1={null}
172:   string2={null}
...:
176: />;
     -^ props of React element `ManyProps`. This type is incompatible with the expected param type of
 54: const Function_ManyProps = (props: Props_ManyProps) => any;
                                        ^^^^^^^^^^^^^^^ object type
  Property `string2` is incompatible:
    172:   string2={null}
                    ^^^^ null. This type is incompatible with
     34:   string2: string,
                    ^^^^^^ string

Error: test.js:177
     v---------------------------------------
177: <ManyProps // OK: All props are defined.
178:   string1="foo"
179:   string2={'bar'}
...:
183: />;
     -^ React element `ManyProps`
     v---------------------------------------
177: <ManyProps // OK: All props are defined.
178:   string1="foo"
179:   string2={'bar'}
...:
183: />;
     -^ props of React element `ManyProps`. Inexact type is incompatible with exact type
 51:   extends React.Component<void, $Exact<Props_ManyProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_ManyProps

Error: test.js:177
     v---------------------------------------
177: <ManyProps // OK: All props are defined.
178:   string1="foo"
179:   string2={'bar'}
...:
183: />;
     -^ React element `ManyProps`
     v---------------------------------------
177: <ManyProps // OK: All props are defined.
178:   string1="foo"
179:   string2={'bar'}
...:
183: />;
     -^ props of React element `ManyProps`. Inexact type is incompatible with exact type
 55: const FunctionExact_ManyProps = (props: $Exact<Props_ManyProps>) => any;
                                             ^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_ManyProps

Error: test.js:184
     v---------------------------------------
184: <ManyProps // OK: All props are defined.
185:   {...{string1: 'foo', string2: 'bar'}}
186:   {...{boolean1: true, boolean2: false}}
187:   {...{number: 42}}
188: />;
     -^ React element `ManyProps`
     v---------------------------------------
184: <ManyProps // OK: All props are defined.
185:   {...{string1: 'foo', string2: 'bar'}}
186:   {...{boolean1: true, boolean2: false}}
187:   {...{number: 42}}
188: />;
     -^ props of React element `ManyProps`. Inexact type is incompatible with exact type
 51:   extends React.Component<void, $Exact<Props_ManyProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_ManyProps

Error: test.js:184
     v---------------------------------------
184: <ManyProps // OK: All props are defined.
185:   {...{string1: 'foo', string2: 'bar'}}
186:   {...{boolean1: true, boolean2: false}}
187:   {...{number: 42}}
188: />;
     -^ React element `ManyProps`
     v---------------------------------------
184: <ManyProps // OK: All props are defined.
185:   {...{string1: 'foo', string2: 'bar'}}
186:   {...{boolean1: true, boolean2: false}}
187:   {...{number: 42}}
188: />;
     -^ props of React element `ManyProps`. Inexact type is incompatible with exact type
 55: const FunctionExact_ManyProps = (props: $Exact<Props_ManyProps>) => any;
                                             ^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_ManyProps

Error: test.js:189
     v-------------------------------------
189: <ManyProps // Error: Missing `number`.
190:   {...{string1: 'foo', string2: 'bar'}}
191:   {...{boolean1: true, boolean2: false}}
192: />;
     -^ React element `ManyProps`
                  v
 41:   propTypes: {
 42:     string1: React.PropTypes.string.isRequired,
 43:     string2: React.PropTypes.string.isRequired,
...:
 47:   },
       ^ property `number`. Property not found in
     v-------------------------------------
189: <ManyProps // Error: Missing `number`.
190:   {...{string1: 'foo', string2: 'bar'}}
191:   {...{boolean1: true, boolean2: false}}
192: />;
     -^ props of React element `ManyProps`

Error: test.js:189
     v-------------------------------------
189: <ManyProps // Error: Missing `number`.
190:   {...{string1: 'foo', string2: 'bar'}}
191:   {...{boolean1: true, boolean2: false}}
192: />;
     -^ React element `ManyProps`
 49: class Class_ManyProps extends React.Component<void, Props_ManyProps, void> {}
                                                         ^^^^^^^^^^^^^^^ property `number`. Property not found in
     v-------------------------------------
189: <ManyProps // Error: Missing `number`.
190:   {...{string1: 'foo', string2: 'bar'}}
191:   {...{boolean1: true, boolean2: false}}
192: />;
     -^ props of React element `ManyProps`

Error: test.js:189
     v-------------------------------------
189: <ManyProps // Error: Missing `number`.
190:   {...{string1: 'foo', string2: 'bar'}}
191:   {...{boolean1: true, boolean2: false}}
192: />;
     -^ React element `ManyProps`
 53:   extends React.PureComponent<void, Props_ManyProps, void> {}
                                         ^^^^^^^^^^^^^^^ property `number`. Property not found in
     v-------------------------------------
189: <ManyProps // Error: Missing `number`.
190:   {...{string1: 'foo', string2: 'bar'}}
191:   {...{boolean1: true, boolean2: false}}
192: />;
     -^ props of React element `ManyProps`

Error: test.js:189
     v-------------------------------------
189: <ManyProps // Error: Missing `number`.
190:   {...{string1: 'foo', string2: 'bar'}}
191:   {...{boolean1: true, boolean2: false}}
192: />;
     -^ React element `ManyProps`
 54: const Function_ManyProps = (props: Props_ManyProps) => any;
                                        ^^^^^^^^^^^^^^^ property `number`. Property not found in
     v-------------------------------------
189: <ManyProps // Error: Missing `number`.
190:   {...{string1: 'foo', string2: 'bar'}}
191:   {...{boolean1: true, boolean2: false}}
192: />;
     -^ props of React element `ManyProps`

Error: test.js:189
     v-------------------------------------
189: <ManyProps // Error: Missing `number`.
190:   {...{string1: 'foo', string2: 'bar'}}
191:   {...{boolean1: true, boolean2: false}}
192: />;
     -^ React element `ManyProps`
     v-------------------------------------
189: <ManyProps // Error: Missing `number`.
190:   {...{string1: 'foo', string2: 'bar'}}
191:   {...{boolean1: true, boolean2: false}}
192: />;
     -^ props of React element `ManyProps`. Inexact type is incompatible with exact type
 51:   extends React.Component<void, $Exact<Props_ManyProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_ManyProps

Error: test.js:189
     v-------------------------------------
189: <ManyProps // Error: Missing `number`.
190:   {...{string1: 'foo', string2: 'bar'}}
191:   {...{boolean1: true, boolean2: false}}
192: />;
     -^ React element `ManyProps`
     v-------------------------------------
189: <ManyProps // Error: Missing `number`.
190:   {...{string1: 'foo', string2: 'bar'}}
191:   {...{boolean1: true, boolean2: false}}
192: />;
     -^ props of React element `ManyProps`. Inexact type is incompatible with exact type
 55: const FunctionExact_ManyProps = (props: $Exact<Props_ManyProps>) => any;
                                             ^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_ManyProps

Error: test.js:193
     v----------------------------------------------------------------
193: <ManyProps // OK: Extra props are allowed. Error for exact types.
194:   string1="foo"
195:   string2={'bar'}
...:
199: />;
     -^ React element `ManyProps`
     v----------------------------------------------------------------
193: <ManyProps // OK: Extra props are allowed. Error for exact types.
194:   string1="foo"
195:   string2={'bar'}
...:
199: />;
     -^ props of React element `ManyProps`. Inexact type is incompatible with exact type
 51:   extends React.Component<void, $Exact<Props_ManyProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_ManyProps

Error: test.js:193
     v----------------------------------------------------------------
193: <ManyProps // OK: Extra props are allowed. Error for exact types.
194:   string1="foo"
195:   string2={'bar'}
...:
199: />;
     -^ React element `ManyProps`
     v----------------------------------------------------------------
193: <ManyProps // OK: Extra props are allowed. Error for exact types.
194:   string1="foo"
195:   string2={'bar'}
...:
199: />;
     -^ props of React element `ManyProps`. Inexact type is incompatible with exact type
 55: const FunctionExact_ManyProps = (props: $Exact<Props_ManyProps>) => any;
                                             ^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_ManyProps

Error: test.js:200
     v-------------------------------------------------------------------
200: <ManyProps // OK: `number` is overwritten at the end of the element.
201:   {...{string1: 'foo', string2: 'bar', number: (any: ?number)}}
202:   boolean1
...:
205: />;
     -^ React element `ManyProps`
     v-------------------------------------------------------------------
200: <ManyProps // OK: `number` is overwritten at the end of the element.
201:   {...{string1: 'foo', string2: 'bar', number: (any: ?number)}}
202:   boolean1
...:
205: />;
     -^ props of React element `ManyProps`. Inexact type is incompatible with exact type
 51:   extends React.Component<void, $Exact<Props_ManyProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_ManyProps

Error: test.js:200
     v-------------------------------------------------------------------
200: <ManyProps // OK: `number` is overwritten at the end of the element.
201:   {...{string1: 'foo', string2: 'bar', number: (any: ?number)}}
202:   boolean1
...:
205: />;
     -^ React element `ManyProps`
     v-------------------------------------------------------------------
200: <ManyProps // OK: `number` is overwritten at the end of the element.
201:   {...{string1: 'foo', string2: 'bar', number: (any: ?number)}}
202:   boolean1
...:
205: />;
     -^ props of React element `ManyProps`. Inexact type is incompatible with exact type
 55: const FunctionExact_ManyProps = (props: $Exact<Props_ManyProps>) => any;
                                             ^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_ManyProps

Error: test.js:200
     v-------------------------------------------------------------------
200: <ManyProps // OK: `number` is overwritten at the end of the element.
201:   {...{string1: 'foo', string2: 'bar', number: (any: ?number)}}
202:   boolean1
...:
205: />;
     -^ props of React element `ManyProps`. This type is incompatible with
                  v
 41:   propTypes: {
 42:     string1: React.PropTypes.string.isRequired,
 43:     string2: React.PropTypes.string.isRequired,
...:
 47:   },
       ^ propTypes of React component
  Property `number` is incompatible:
    201:   {...{string1: 'foo', string2: 'bar', number: (any: ?number)}}
                                                              ^^^^^^^ null. This type is incompatible with
     46:     number: React.PropTypes.number.isRequired,
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number

Error: test.js:200
     v-------------------------------------------------------------------
200: <ManyProps // OK: `number` is overwritten at the end of the element.
201:   {...{string1: 'foo', string2: 'bar', number: (any: ?number)}}
202:   boolean1
...:
205: />;
     -^ props of React element `ManyProps`. This type is incompatible with
 49: class Class_ManyProps extends React.Component<void, Props_ManyProps, void> {}
                                                         ^^^^^^^^^^^^^^^ object type
  Property `number` is incompatible:
    201:   {...{string1: 'foo', string2: 'bar', number: (any: ?number)}}
                                                              ^^^^^^^ null. This type is incompatible with
     37:   number: number,
                   ^^^^^^ number

Error: test.js:200
     v-------------------------------------------------------------------
200: <ManyProps // OK: `number` is overwritten at the end of the element.
201:   {...{string1: 'foo', string2: 'bar', number: (any: ?number)}}
202:   boolean1
...:
205: />;
     -^ props of React element `ManyProps`. This type is incompatible with
 53:   extends React.PureComponent<void, Props_ManyProps, void> {}
                                         ^^^^^^^^^^^^^^^ object type
  Property `number` is incompatible:
    201:   {...{string1: 'foo', string2: 'bar', number: (any: ?number)}}
                                                              ^^^^^^^ null. This type is incompatible with
     37:   number: number,
                   ^^^^^^ number

Error: test.js:200
     v-------------------------------------------------------------------
200: <ManyProps // OK: `number` is overwritten at the end of the element.
201:   {...{string1: 'foo', string2: 'bar', number: (any: ?number)}}
202:   boolean1
...:
205: />;
     -^ props of React element `ManyProps`. This type is incompatible with the expected param type of
 54: const Function_ManyProps = (props: Props_ManyProps) => any;
                                        ^^^^^^^^^^^^^^^ object type
  Property `number` is incompatible:
    201:   {...{string1: 'foo', string2: 'bar', number: (any: ?number)}}
                                                              ^^^^^^^ null. This type is incompatible with
     37:   number: number,
                   ^^^^^^ number

Error: test.js:206
     v--------------------------------------------
206: <ManyProps // Error: `number` cannot be null.
207:   boolean1
208:   boolean2={false}
...:
211: />;
     -^ React element `ManyProps`
     v--------------------------------------------
206: <ManyProps // Error: `number` cannot be null.
207:   boolean1
208:   boolean2={false}
...:
211: />;
     -^ props of React element `ManyProps`. Inexact type is incompatible with exact type
 51:   extends React.Component<void, $Exact<Props_ManyProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_ManyProps

Error: test.js:206
     v--------------------------------------------
206: <ManyProps // Error: `number` cannot be null.
207:   boolean1
208:   boolean2={false}
...:
211: />;
     -^ React element `ManyProps`
     v--------------------------------------------
206: <ManyProps // Error: `number` cannot be null.
207:   boolean1
208:   boolean2={false}
...:
211: />;
     -^ props of React element `ManyProps`. Inexact type is incompatible with exact type
 55: const FunctionExact_ManyProps = (props: $Exact<Props_ManyProps>) => any;
                                             ^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_ManyProps

Error: test.js:210
210:   {...{string1: 'foo', string2: 'bar', number: (any: ?number)}}
                                                          ^^^^^^^ null. This type is incompatible with
209:   number={42}
               ^^ number

Error: test.js:213
213: <OptionalProps />; // Error: `foo` is required.
     ^^^^^^^^^^^^^^^^^ React element `OptionalProps`
                  v
 69:   propTypes: {
 70:     foo: React.PropTypes.any.isRequired,
 71:     bar: React.PropTypes.number,
 72:   },
       ^ property `foo`. Property not found in
213: <OptionalProps />; // Error: `foo` is required.
     ^^^^^^^^^^^^^^^^^ props of React element `OptionalProps`

Error: test.js:213
213: <OptionalProps />; // Error: `foo` is required.
     ^^^^^^^^^^^^^^^^^ React element `OptionalProps`
 75:   extends React.Component<void, Props_OptionalProps, void> {}
                                     ^^^^^^^^^^^^^^^^^^^ property `foo`. Property not found in
213: <OptionalProps />; // Error: `foo` is required.
     ^^^^^^^^^^^^^^^^^ props of React element `OptionalProps`

Error: test.js:213
213: <OptionalProps />; // Error: `foo` is required.
     ^^^^^^^^^^^^^^^^^ React element `OptionalProps`
 79:   extends React.PureComponent<void, Props_OptionalProps, void> {}
                                         ^^^^^^^^^^^^^^^^^^^ property `foo`. Property not found in
213: <OptionalProps />; // Error: `foo` is required.
     ^^^^^^^^^^^^^^^^^ props of React element `OptionalProps`

Error: test.js:213
213: <OptionalProps />; // Error: `foo` is required.
     ^^^^^^^^^^^^^^^^^ React element `OptionalProps`
 80: const Function_OptionalProps = (props: Props_OptionalProps) => any;
                                            ^^^^^^^^^^^^^^^^^^^ property `foo`. Property not found in
213: <OptionalProps />; // Error: `foo` is required.
     ^^^^^^^^^^^^^^^^^ props of React element `OptionalProps`

Error: test.js:213
213: <OptionalProps />; // Error: `foo` is required.
     ^^^^^^^^^^^^^^^^^ React element `OptionalProps`
 81: const FunctionExact_OptionalProps = (props: $Exact<Props_OptionalProps>) => any;
                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ property `foo`. Property not found in
213: <OptionalProps />; // Error: `foo` is required.
     ^^^^^^^^^^^^^^^^^ props of React element `OptionalProps`

Error: test.js:213
213: <OptionalProps />; // Error: `foo` is required.
     ^^^^^^^^^^^^^^^^^ React element `OptionalProps`
213: <OptionalProps />; // Error: `foo` is required.
     ^^^^^^^^^^^^^^^^^ props of React element `OptionalProps`. Inexact type is incompatible with exact type
 77:   extends React.Component<void, $Exact<Props_OptionalProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_OptionalProps

Error: test.js:214
214: <OptionalProps foo={42} />; // OK: `foo` is defined.
     ^^^^^^^^^^^^^^^^^^^^^^^^^^ React element `OptionalProps`
214: <OptionalProps foo={42} />; // OK: `foo` is defined.
     ^^^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `OptionalProps`. Inexact type is incompatible with exact type
 77:   extends React.Component<void, $Exact<Props_OptionalProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_OptionalProps

Error: test.js:215
215: <OptionalProps foo={undefined} />; // OK: `foo` is defined as undefined.
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ React element `OptionalProps`
215: <OptionalProps foo={undefined} />; // OK: `foo` is defined as undefined.
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ props of React element `OptionalProps`. Inexact type is incompatible with exact type
 77:   extends React.Component<void, $Exact<Props_OptionalProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_OptionalProps

Error: test.js:216
     v----------------------------------------------------------------
216: <OptionalProps // OK: Both props are defined with a correct type.
217:   foo={4}
218:   bar={2}
219: />;
     -^ React element `OptionalProps`
     v----------------------------------------------------------------
216: <OptionalProps // OK: Both props are defined with a correct type.
217:   foo={4}
218:   bar={2}
219: />;
     -^ props of React element `OptionalProps`. Inexact type is incompatible with exact type
 77:   extends React.Component<void, $Exact<Props_OptionalProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_OptionalProps

Error: test.js:220
     v---------------------------------------------
220: <OptionalProps // Error: `foo` has a bad type.
221:   foo="nope"
222:   bar={2}
223: />;
     -^ React element `OptionalProps`
     v---------------------------------------------
220: <OptionalProps // Error: `foo` has a bad type.
221:   foo="nope"
222:   bar={2}
223: />;
     -^ props of React element `OptionalProps`. Inexact type is incompatible with exact type
 77:   extends React.Component<void, $Exact<Props_OptionalProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_OptionalProps

Error: test.js:220
     v---------------------------------------------
220: <OptionalProps // Error: `foo` has a bad type.
221:   foo="nope"
222:   bar={2}
223: />;
     -^ props of React element `OptionalProps`. This type is incompatible with
 75:   extends React.Component<void, Props_OptionalProps, void> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `foo` is incompatible:
    221:   foo="nope"
               ^^^^^^ string. This type is incompatible with
     66: type Props_OptionalProps = {foo: ?number, bar?: number};
                                           ^^^^^^ number

Error: test.js:220
     v---------------------------------------------
220: <OptionalProps // Error: `foo` has a bad type.
221:   foo="nope"
222:   bar={2}
223: />;
     -^ props of React element `OptionalProps`. This type is incompatible with
 79:   extends React.PureComponent<void, Props_OptionalProps, void> {}
                                         ^^^^^^^^^^^^^^^^^^^ object type
  Property `foo` is incompatible:
    221:   foo="nope"
               ^^^^^^ string. This type is incompatible with
     66: type Props_OptionalProps = {foo: ?number, bar?: number};
                                           ^^^^^^ number

Error: test.js:220
     v---------------------------------------------
220: <OptionalProps // Error: `foo` has a bad type.
221:   foo="nope"
222:   bar={2}
223: />;
     -^ props of React element `OptionalProps`. This type is incompatible with the expected param type of
 80: const Function_OptionalProps = (props: Props_OptionalProps) => any;
                                            ^^^^^^^^^^^^^^^^^^^ object type
  Property `foo` is incompatible:
    221:   foo="nope"
               ^^^^^^ string. This type is incompatible with
     66: type Props_OptionalProps = {foo: ?number, bar?: number};
                                           ^^^^^^ number

Error: test.js:224
     v---------------------------------------------
224: <OptionalProps // Error: `bar` has a bad type.
225:   foo={4}
226:   bar="nope"
227: />;
     -^ React element `OptionalProps`
     v---------------------------------------------
224: <OptionalProps // Error: `bar` has a bad type.
225:   foo={4}
226:   bar="nope"
227: />;
     -^ props of React element `OptionalProps`. Inexact type is incompatible with exact type
 77:   extends React.Component<void, $Exact<Props_OptionalProps>, void> {}
                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ exact type: Props_OptionalProps

Error: test.js:224
     v---------------------------------------------
224: <OptionalProps // Error: `bar` has a bad type.
225:   foo={4}
226:   bar="nope"
227: />;
     -^ props of React element `OptionalProps`. This type is incompatible with
                  v
 69:   propTypes: {
 70:     foo: React.PropTypes.any.isRequired,
 71:     bar: React.PropTypes.number,
 72:   },
       ^ propTypes of React component
  Property `bar` is incompatible:
    226:   bar="nope"
               ^^^^^^ string. This type is incompatible with
     71:     bar: React.PropTypes.number,
                  ^^^^^^^^^^^^^^^^^^^^^^ number

Error: test.js:224
     v---------------------------------------------
224: <OptionalProps // Error: `bar` has a bad type.
225:   foo={4}
226:   bar="nope"
227: />;
     -^ props of React element `OptionalProps`. This type is incompatible with
 75:   extends React.Component<void, Props_OptionalProps, void> {}
                                     ^^^^^^^^^^^^^^^^^^^ object type
  Property `bar` is incompatible:
    226:   bar="nope"
               ^^^^^^ string. This type is incompatible with
     66: type Props_OptionalProps = {foo: ?number, bar?: number};
                                                         ^^^^^^ number

Error: test.js:224
     v---------------------------------------------
224: <OptionalProps // Error: `bar` has a bad type.
225:   foo={4}
226:   bar="nope"
227: />;
     -^ props of React element `OptionalProps`. This type is incompatible with
 79:   extends React.PureComponent<void, Props_OptionalProps, void> {}
                                         ^^^^^^^^^^^^^^^^^^^ object type
  Property `bar` is incompatible:
    226:   bar="nope"
               ^^^^^^ string. This type is incompatible with
     66: type Props_OptionalProps = {foo: ?number, bar?: number};
                                                         ^^^^^^ number

Error: test.js:224
     v---------------------------------------------
224: <OptionalProps // Error: `bar` has a bad type.
225:   foo={4}
226:   bar="nope"
227: />;
     -^ props of React element `OptionalProps`. This type is incompatible with the expected param type of
 80: const Function_OptionalProps = (props: Props_OptionalProps) => any;
                                            ^^^^^^^^^^^^^^^^^^^ object type
  Property `bar` is incompatible:
    226:   bar="nope"
               ^^^^^^ string. This type is incompatible with
     66: type Props_OptionalProps = {foo: ?number, bar?: number};
                                                         ^^^^^^ number

Error: test.js:233
     v-------------------------------------------------
233: <DefaultProps // OK: It is missing a default prop.
234:   bar={2}
235: />;
     -^ React element `DefaultProps`
                  v
 98:   propTypes: {
 99:     foo: React.PropTypes.number.isRequired,
100:     bar: React.PropTypes.number.isRequired,
101:   },
       ^ property `foo`. Property not found in
     v-------------------------------------------------
233: <DefaultProps // OK: It is missing a default prop.
234:   bar={2}
235: />;
     -^ props of React element `DefaultProps`

Error: test.js:233
     v-------------------------------------------------
233: <DefaultProps // OK: It is missing a default prop.
234:   bar={2}
235: />;
     -^ React element `DefaultProps`
123: function Function_DefaultProps(props: Props_DefaultProps) {
                                           ^^^^^^^^^^^^^^^^^^ property `foo`. Property not found in
     v-------------------------------------------------
233: <DefaultProps // OK: It is missing a default prop.
234:   bar={2}
235: />;
     -^ props of React element `DefaultProps`

Error: test.js:233
     v-------------------------------------------------
233: <DefaultProps // OK: It is missing a default prop.
234:   bar={2}
235: />;
     -^ React element `DefaultProps`
129: function FunctionExact_DefaultProps(props: $Exact<Props_DefaultProps>) {
                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^ property `foo`. Property not found in
     v-------------------------------------------------
233: <DefaultProps // OK: It is missing a default prop.
234:   bar={2}
235: />;
     -^ props of React element `DefaultProps`

Error: test.js:236
     v-----------------------------------------------------------------
236: <DefaultProps // Error: It is missing a required non-default prop.
237:   foo={1}
238: />;
     -^ React element `DefaultProps`
                  v
 98:   propTypes: {
 99:     foo: React.PropTypes.number.isRequired,
100:     bar: React.PropTypes.number.isRequired,
101:   },
       ^ property `bar`. Property not found in
     v-----------------------------------------------------------------
236: <DefaultProps // Error: It is missing a required non-default prop.
237:   foo={1}
238: />;
     -^ props of React element `DefaultProps`

Error: test.js:236
     v-----------------------------------------------------------------
236: <DefaultProps // Error: It is missing a required non-default prop.
237:   foo={1}
238: />;
     -^ React element `DefaultProps`
123: function Function_DefaultProps(props: Props_DefaultProps) {
                                           ^^^^^^^^^^^^^^^^^^ property `bar`. Property not found in
     v-----------------------------------------------------------------
236: <DefaultProps // Error: It is missing a required non-default prop.
237:   foo={1}
238: />;
     -^ props of React element `DefaultProps`

Error: test.js:236
     v-----------------------------------------------------------------
236: <DefaultProps // Error: It is missing a required non-default prop.
237:   foo={1}
238: />;
     -^ React element `DefaultProps`
129: function FunctionExact_DefaultProps(props: $Exact<Props_DefaultProps>) {
                                                ^^^^^^^^^^^^^^^^^^^^^^^^^^ property `bar`. Property not found in
     v-----------------------------------------------------------------
236: <DefaultProps // Error: It is missing a required non-default prop.
237:   foo={1}
238: />;
     -^ props of React element `DefaultProps`


Found 100 errors
